// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`interaction snapshots > Enter selects the highlighted task and opens edit TUI 1`] = `
"                                                                                
  Edit Task MRKL-001                                                            
  ────────────────────────────────────────────────────────────                  
› Type            ◂ feat ▸                                                      
  Status            todo                                                        
  Priority          ⏫ 5-highest                                                 
  Title           auth epic                                                     
  Description     ····················                                          
  Flag            ····················                                          
  Parent          type to search...                                             
  + Block         type to search...                                             
  + Add           ····················                                          
  ────────────────────────────────────────────────────────────                  
  ↑↓ navigate  ←→ cycle type/status/priority  Ctrl+N newline  Enter submit  Esc 
quit                                                                            "
`;

exports[`interaction snapshots > Tab key switches between Tasks and Archive 1`] = `
" Tasks   [Archive]                                                              
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-099    closed ⏹️       old feature     │ ⏹️ MRKL-099 feat closed             
                                            │ old feature                       
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
1/1 tasks  ↑↓: navigate  /: search  s: sort  d: direction  Tab: switch  Esc: qui
t                                                                               "
`;

exports[`interaction snapshots > arrow down moves selection to next task 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo ⏫         auth epic       │ 🔼 MRKL-002 fix in-progress         
MRKL-002    in-progress 🔼  fix login bug   │ fix login bug                      
MRKL-003    todo 🔽         auth tests      │                                    
MRKL-004    done ⏹️         update ci conf… │                                    
MRKL-005    todo ⏹️         dashboard layo… │                                    
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  /: search  s: sort  d: direction  Tab: switch  Esc: qui
t                                                                               "
`;

exports[`interaction snapshots > arrow up moves selection back to previous task 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo ⏫         auth epic       │ ⏫ MRKL-001 feat todo               
MRKL-002    in-progress 🔼  fix login bug   │ auth epic                          
MRKL-003    todo 🔽         auth tests      │                                    
MRKL-004    done ⏹️         update ci conf… │                                    
MRKL-005    todo ⏹️         dashboard layo… │                                    
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  /: search  s: sort  d: direction  Tab: switch  Esc: qui
t                                                                               "
`;

exports[`interaction snapshots > initial render shows task list with first item selected 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo ⏫         auth epic       │ ⏫ MRKL-001 feat todo               
MRKL-002    in-progress 🔼  fix login bug   │ auth epic                          
MRKL-003    todo 🔽         auth tests      │                                    
MRKL-004    done ⏹️         update ci conf… │                                    
MRKL-005    todo ⏹️         dashboard layo… │                                    
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  /: search  s: sort  d: direction  Tab: switch  Esc: qui
t                                                                               "
`;

exports[`interaction snapshots > typing characters filters the task list 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo ⏫         auth epic       │ ⏫ MRKL-001 feat todo               
MRKL-002    in-progress 🔼  fix login bug   │ auth epic                          
MRKL-003    todo 🔽         auth tests      │                                    
MRKL-004    done ⏹️         update ci conf… │                                    
MRKL-005    todo ⏹️         dashboard layo… │                                    
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  /: search  s: sort  d: direction  Tab: switch  Esc: qui
t                                                                               "
`;

exports[`render snapshots > archive tab active snapshot at 80 cols 1`] = `
" Tasks   [Archive]                                                              
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-020    closed ⏹️       Archived featu… │ ⏹️ MRKL-020 feat closed             
MRKL-021    done ⏹️         Old bugfix      │ Archived feature                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
2/2 tasks  ↑↓: navigate  /: search  s: sort  d: direction  Tab: switch  Esc: qui
t                                                                               "
`;

exports[`render snapshots > basic task list snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo ✴️⏫       Add user authe… │ ✴️⏫ MRKL-001 feat todo               
├─MRKL-004    todo ❇️🔽       Design dashb… │ Add user authentication             
MRKL-002    in-progress 🔼  Fix login redi… │                                    
MRKL-003    done ⏹️         Update CI pipe… │ Relationships                      
MRKL-005    in-progress ⏬  Refactor token… │   ❇️ Children: MRKL-004             
MRKL-006    todo ⏹️         Write integrat… │                                    
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
6/6 tasks  ↑↓: navigate  /: search  s: sort  d: direction  Tab: switch  Esc: qui
t                                                                               "
`;

exports[`render snapshots > blocking indicators snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-010    todo ⏫🚧       Database migra… │ ⏫ MRKL-010 feat todo                
MRKL-011    todo 🔼🛑       API endpoints   │ Database migration                  
MRKL-012    todo ⏹️🛑       Frontend integ… │                                     
                                            │ Relationships                     
                                            │   🚧 Blocks: MRKL-011, MRKL-012    
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
3/3 tasks  ↑↓: navigate  /: search  s: sort  d: direction  Tab: switch  Esc: qui
t                                                                               "
`;

exports[`render snapshots > empty task list snapshot at 40 cols 1`] = `
"[Tasks]   Archive                       
                                        
                                        
──────────────────────┬─────────────────
ID          STATUS          … │ Preview 
──────────────────────┼─────────────────
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
──────────────────────┴─────────────────
0/0 tasks  ↑↓: navigate  /: search  s: s
ort  d: direction  Tab: switch  Esc: qui"
`;

exports[`render snapshots > empty task list snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
0/0 tasks  ↑↓: navigate  /: search  s: sort  d: direction  Tab: switch  Esc: qui
t                                                                               "
`;

exports[`render snapshots > empty task list snapshot at 120 cols 1`] = `
"[Tasks]   Archive                                                                                                       
                                                                                                                        
                                                                                                                        
──────────────────────────────────────────────────────────────────┬─────────────────────────────────────────────────────
ID          STATUS          TITLE                                 │ Preview                                             
──────────────────────────────────────────────────────────────────┼─────────────────────────────────────────────────────
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
                                                                  │                                                     
──────────────────────────────────────────────────────────────────┴─────────────────────────────────────────────────────
0/0 tasks  ↑↓: navigate  /: search  s: sort  d: direction  Tab: switch  Esc: quit                                       "
`;

exports[`render snapshots > epic grouping snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo ✴️⏹️       Auth epic       │ ✴️⏹️ MRKL-001 feat todo               
├─MRKL-002    in-progress ❇️⏹️Login page    │ Auth epic                           
├─MRKL-003    todo ❇️⏹️       Token refresh │                                     
MRKL-004    done ⏹️         Fix CI pipeline │ Relationships                      
MRKL-005    todo ⏹️         Update README   │   ❇️ Children: MRKL-002, MRKL-003   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
5/5 tasks  ↑↓: navigate  /: search  s: sort  d: direction  Tab: switch  Esc: qui
t                                                                               "
`;

exports[`render snapshots > mixed emoji widths snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-001    todo ⏫🚧       Highest priori… │ ⏫ MRKL-001 feat todo                
MRKL-002    in-progress ⏹️  Normal priorit… │ Highest priority blocker           
MRKL-003    todo ⏬🛑       Lowest blocked… │                                     
                                            │ Relationships                     
                                            │   🚧 Blocks: MRKL-003              
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
3/3 tasks  ↑↓: navigate  /: search  s: sort  d: direction  Tab: switch  Esc: qui
t                                                                               "
`;

exports[`render snapshots > scroll offset snapshot at 80 cols 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-004    todo ⏹️         Task number 4   │ ⏹️ MRKL-006 chore done              
MRKL-005    in-progress ⏹️  Task number 5   │ Task number 6                      
MRKL-006    done ⏹️         Task number 6   │                                    
MRKL-007    todo ⏹️         Task number 7   │                                    
MRKL-008    in-progress ⏹️  Task number 8   │                                    
MRKL-009    done ⏹️         Task number 9   │                                    
MRKL-010    todo ⏹️         Task number 10  │                                    
MRKL-011    in-progress ⏹️  Task number 11  │                                    
MRKL-012    done ⏹️         Task number 12  │                                    
MRKL-013    todo ⏹️         Task number 13  │                                    
MRKL-014    in-progress ⏹️  Task number 14  │                                    
MRKL-015    done ⏹️         Task number 15  │                                    
MRKL-016    todo ⏹️         Task number 16  │                                    
MRKL-017    in-progress ⏹️  Task number 17  │                                    
MRKL-018    done ⏹️         Task number 18  │                                    
────────────────────────────────────────────┴───────────────────────────────────
20/20 tasks  ↑↓: navigate  /: search  s: sort  d: direction  Tab: switch  Esc: q
uit                                                                             "
`;

exports[`render snapshots > title truncation snapshot at 40 cols 1`] = `
"[Tasks]   Archive                       
                                        
                                        
──────────────────────┬─────────────────
ID          STATUS          … │ Preview 
──────────────────────┼─────────────────
MRKL-001    todo ⏹️         … │ ⏹️ MRKL-00
1 feat todo                             
MRKL-002    in-progress ⏹️  … │ Implement
 user authentication with OAuth2 and SAM
L                                       
MRKL-003    done ⏹️         … │          
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 
                      │                 "
`;

exports[`render snapshots > wraps long relationship ID lists with aligned continuation lines 1`] = `
"[Tasks]   Archive                                                               
                                                                                
                                                                                
────────────────────────────────────────────┬───────────────────────────────────
ID          STATUS          TITLE           │ Preview                           
────────────────────────────────────────────┼───────────────────────────────────
MRKL-050    todo ⏫🚧       blocker task    │ ⏫ MRKL-050 feat todo                
MRKL-051    todo ⏹️🛑       task a          │ blocker task                        
MRKL-052    todo ⏹️🛑       task b          │                                     
MRKL-053    todo ⏹️🛑       task c          │ Relationships                       
MRKL-054    todo ⏹️🛑       task d          │   🚧 Blocks: MRKL-051, MRKL-052,     
MRKL-055    todo ⏹️🛑       task e          │              MRKL-053, MRKL-054,    
                                            │              MRKL-055             
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
                                            │                                   
────────────────────────────────────────────┴───────────────────────────────────
6/6 tasks  ↑↓: navigate  /: search  s: sort  d: direction  Tab: switch  Esc: qui
t                                                                               "
`;
